# cpp_base_project

./: .gitignore  CMakeLists.txt  Doxyfile  TODO_LIST.txt  build.sh  format.sh
include/: a.hpp  boost_function.hpp  brigand_function.hpp  expected_function.hpp  expected_lite_function.hpp  fmt_function.hpp  gsl_function.hpp  philslib_function.hpp  thread_function.hpp
src/: a.cpp  boost_function.cpp  brigand_function.cpp  expected_function.cpp  expected_lite_function.cpp  fmt_function.cpp  gsl_function.cpp  main.cpp  philslib_function.cpp  thread_function.cpp
test/src/: boost_function_test.cpp  brigand_function_test.cpp  expected_function_test.cpp  expected_lite_function_test.cpp  fmt_function_test.cpp  gsl_function_test.cpp  philslib_function_test.cpp  test_main.cpp  thread_function_test.cpp
